--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -1,5 +1,8 @@
 ---
 import BentoItem from "./BentoItem.astro";
+import {getI18N} from '../i18n/index'
+const {currentLocale} = Astro
+const i18n = getI18N({ currentLocale })
 ---
 
 <section
@@ -11,7 +14,7 @@ import BentoItem from "./BentoItem.astro";
 >
   <BentoItem
     class="col-span-10 md:col-span-4"
-    title="ANDORRA: EL CÉNIT DE LOS PREMIOS ESLAND"
+    title={i18n.BENTO_TITLE_1}
   >
     <div
       class="absolute left-0 top-0 bottom-0 w-full
@@ -22,17 +25,13 @@ import BentoItem from "./BentoItem.astro";
       style="background-image: url('/mountain.webp')"
     >
     </div>
-    <p class="max-w-xl" slot="content">
-      Una nueva edición <strong>cargada de novedades</strong> y contenido, que empezará varias
-      semanas antes de la ansiada gala.<strong>Directos especiales, colaboraciones,
-      conciertos y mucho más</strong> en lo que será una auténtica fiesta dedicada a la
-      creación de contenido.
+    <p class="max-w-xl" slot="content" set:html={i18n.BENTO_CONTENT_1}>
     </p>
   </BentoItem>
   <BentoItem
     class="col-span-10 md:col-span-6"
-    title="LA ALFOMBRA BLANCA"
-    subtitle="16 de febrero de 2024"
+    title={i18n.BENTO_TITLE_2}
+    subtitle={i18n.BENTO_SUBTITLE_2}
   >
     <div
       class="absolute left-0 top-0 bottom-0 w-full
@@ -43,16 +42,13 @@ import BentoItem from "./BentoItem.astro";
       style="background-image: url('/pistas.webp')"
     >
     </div>
-    <p class="max-w-xl" slot="content">
-      Este año, el momento de la alfombra azul será sustituido y mejorado,
-      gracias a los increíbles paisajes andorranos, por una <strong>alfombra blanca en
-      plena nieve,</strong> situada en las <strong>pistas de esquí de Andorra.</strong>
+    <p class="max-w-xl" slot="content" set:html={i18n.BENTO_CONTENT_2}>
     </p>
   </BentoItem>
   <BentoItem
     class="col-span-10 md:col-span-6"
-    title="LA GALA"
-    subtitle="17 de febrero de 2024"
+    title={i18n.BENTO_TITLE_3}
+    subtitle={i18n.BENTO_SUBTITLE_3}
   >
     <div
       class="absolute left-0 top-0 bottom-0 w-full
@@ -63,15 +59,12 @@ import BentoItem from "./BentoItem.astro";
       style="background-image: url('/grefg.webp')"
     >
     </div>
-    <p class="max-w-xl" slot="content">
-      Una gala de premios llena de <strong>contenido de primer nivel y muchas sorpresas,</strong>
-      en la que se descubrirán los <strong>ganadores</strong> de esta tercera edición de los
-      Premios ESLAND.
+    <p class="max-w-xl" slot="content" set:html={i18n.BENTO_CONTENT_3}>
     </p>
   </BentoItem>
   <BentoItem
     class="col-span-10 md:col-span-4"
-    title="DISFRUTA DEL REDDIT DE LA COMUNIDAD"
+    title={i18n.BENTO_TITLE_4}
   >
     <div
       class="absolute left-0 top-0 bottom-0 w-full
@@ -82,12 +75,7 @@ import BentoItem from "./BentoItem.astro";
       style="background-image: url('/laptop.webp')"
     >
     </div>
-    <p class="max-w-xl" slot="content">
-      Este año, el reddit no formará parte de las votaciones de los premios,
-      pero sí que <strong>formará parte de la comunidad.</strong> El subreddit oficial de los
-      Premios ESLAND está abierto para ti, para que compartas tus clips, tus
-      opiniones y para que <strong>interactúes con toda la comunidad</strong> del streaming
-      hispanohablante.
+    <p class="max-w-xl" slot="content" set:html={i18n.BENTO_CONTENT_4}>
     </p>
   </BentoItem>
 </section>
