--- a/src/components/BentoItem.astro
+++ b/src/components/BentoItem.astro
@@ -11,7 +11,7 @@ const { title, subtitle } = Astro.props;
 <article
   class={`
   ${Astro.props.class}
-  col-span-5 relative rounded-xl backdrop-blur-md border border-black/10 shadow-inner shadow-white/10 overflow-hidden group
+  col-span-5 relative rounded-xl  border border-black/10 shadow-inner shadow-white/10 overflow-hidden group
 `}
 >
   <div class="absolute z-10 bottom-0 top-0 w-full h-full bg-gradient-to-b from-transparent from-40% via-black/20 to-black/80"></div>
