--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,30 @@
 ---
 import Logo from "./Logo.astro";
+import {getI18N} from '../i18n/index'
+const {currentLocale} = Astro
+const i18n = getI18N({ currentLocale })
 ---
 
-<header class="fixed w-screen py-4 z-10 backdrop-blur-sm top-0 px-8 lg:px-0">
+<header id="header-nav" class="fixed w-screen py-4 z-30 top-0 px-8 lg:px-0">
   <div class="grid grid-cols-3 max-w-7xl mx-auto items-center justify-between">
     <a href="/" class="col-span-1">
-      <Logo class="w-12"/>
+      <Logo class="w-10"/>
     </a>
     <nav class="col-span-1 justify-self-center">
       <ul class="flex gap-4">
-        <li>INFO</li>
-        <li>ARCHIVO</li>
+        <li>
+          <a class="hover:underline" href="#">{i18n.HEADER_INFO}</a>
+        </li>
+        <li>
+          <a class="hover:underline" href="#">{i18n.HEADER_ARCHIVE}</a>
+        </li>
       </ul>
     </nav>
     <a
       href="#"
       class="border rounded-full inline-block border-white px-4 py-2 justify-self-end hover:bg-white hover:text-black duration-300"
     >
-      ESLAND: EL DOCUMENTAL
+      {i18n.HEADER_BUTTON}
     </a>
   </div>
 </header>
