--- a/src/components/PreFooter.astro
+++ b/src/components/PreFooter.astro
@@ -1,9 +1,16 @@
+---
+import {getI18N} from '../i18n/index'
+const {currentLocale} = Astro
+const i18n = getI18N({ currentLocale })
+---
+
+
 <section class="w-full p-20 max-w-[1400px] mx-auto">
   <h3
     class="uppercase text-4xl tracking-wide text-center font-semibold mb-10 
     text-balance mx-auto"
   >
-    Guía de la 3ª Edición de los premios ESLAND
+    {i18n.PREFOOTER_VIDEO_TITLE}
   </h3>
   <lite-youtube
     class="shadow-2xl shadow-white/10 rounded-xl"
