--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Header from "../components/Header.astro";
-import "@fontsource-variable/onest"
+import "@fontsource-variable/onest";
 
 interface Props {
   title: string;
@@ -8,10 +8,11 @@ interface Props {
 }
 
 const { title, description } = Astro.props;
+const { currentLocale } = Astro;
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang={ currentLocale }>
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content={description} />
@@ -29,7 +30,7 @@ const { title, description } = Astro.props;
     color-scheme: dark;
   }
   html {
-    font-family: 'Onest Variable', system-ui, sans-serif;
+    font-family: "Onest Variable", system-ui, sans-serif;
     background: #151a36;
   }
   p {
@@ -44,4 +45,20 @@ const { title, description } = Astro.props;
     color: white;
     font-weight: 700;
   }
+
+  #header-nav{
+    animation: blur linear both;
+    animation-timeline: scroll();
+    animation-range: 0 500px;
+  }
+
+  @keyframes blur {
+      to {
+        box-shadow: 
+          0px 5px 50px -5px rgba(0, 0, 0, 0.1)
+          0px 0px 0 1px rgba(0,0,0, 0.3);
+        background: rgba(0,0,0, 0.3);
+        backdrop-filter: blur(10px);
+      }
+    }
 </style>
